# sundials

./: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CITATIONS.md  CMakeLists.txt  README.md  pyproject.toml
benchmarks/diffusion_2D/: CMakeLists.txt  README.md  diffusion_2D.cpp  diffusion_2D.hpp  main_arkode.cpp  main_cvode.cpp  main_ida.cpp  preconditioner_jacobi.cpp
benchmarks/diffusion_2D/mpi_gpu/: CMakeLists.txt  buffers.cpp  diffusion.cpp  solution.cpp  utils.cpp
benchmarks/diffusion_2D/mpi_serial/: CMakeLists.txt  buffers.cpp  diffusion.cpp  solution.cpp  utils.cpp
benchmarks/nvector/: CMakeLists.txt  plot_nvector_performance_results.py  plot_nvector_performance_speedup.py  test_nvector_performance.c  test_nvector_performance.h
benchmarks/nvector/cuda/: CMakeLists.txt  test_nvector_performance_cuda.cu
benchmarks/nvector/hip/: CMakeLists.txt  test_nvector_performance_hip.cpp
benchmarks/nvector/kokkos/: CMakeLists.txt  test_nvector_performance_kokkos.cpp
benchmarks/nvector/mpiplusx/: CMakeLists.txt  test_nvector_performance_mpiplusx.c
benchmarks/nvector/openmp/: CMakeLists.txt  test_nvector_performance_openmp.c
benchmarks/nvector/openmpdev/: CMakeLists.txt  test_nvector_performance_openmpdev.c
benchmarks/nvector/parallel/: CMakeLists.txt  test_nvector_performance_parallel.c
benchmarks/nvector/parhyp/: CMakeLists.txt  test_nvector_performance_parhyp.c
benchmarks/nvector/petsc/: CMakeLists.txt  test_nvector_performance_petsc.c
benchmarks/nvector/pthreads/: CMakeLists.txt  test_nvector_performance_pthreads.c
benchmarks/nvector/raja/: CMakeLists.txt  test_nvector_performance_raja.cpp
benchmarks/nvector/serial/: CMakeLists.txt  test_nvector_performance_serial.c
benchmarks/nvector/sycl/: CMakeLists.txt  test_nvector_performance_sycl.cpp
bindings/sundials4py/: CMakeLists.txt  generate.py  generate_all.sh  sundials4py.cpp
bindings/sundials4py/arkode/: arkode.cpp  arkode_arkstep.cpp  arkode_arkstep_generated.hpp  arkode_erkstep.cpp  arkode_erkstep_generated.hpp  arkode_forcingstep.cpp  arkode_forcingstep_generated.hpp  arkode_generated.hpp  arkode_lsrkstep.cpp  arkode_mristep.cpp  arkode_mristep_generated.hpp  arkode_splittingstep.cpp  arkode_splittingstep_generated.hpp  arkode_sprkstep.cpp  arkode_sprkstep_generated.hpp  arkode_usersupplied.hpp  generate.yaml
bindings/sundials4py/cvodes/: cvodes.cpp  cvodes_generated.hpp  cvodes_usersupplied.hpp  generate.yaml
bindings/sundials4py/helpers/: sundials4py_helpers.hpp  sundials4py_types.hpp
bindings/sundials4py/idas/: generate.yaml  idas.cpp  idas_generated.hpp  idas_usersupplied.hpp
bindings/sundials4py/include/: sundials4py.hpp  sundials4py_helpers.hpp  sundials4py_types.hpp
bindings/sundials4py/kinsol/: generate.yaml  kinsol.cpp  kinsol_generated.hpp  kinsol_usersupplied.hpp
bindings/sundials4py/litgen_extensions/: adapt_array_params.py  adapt_modifiable_immutable_to_return.py  adapt_sundials_type_returns.py  preprocess.py
bindings/sundials4py/nvector/: generate.yaml  nvector_cuda.cpp  nvector_cuda_generated.hpp  nvector_manyvector.cpp  nvector_manyvector_generated.hpp  nvector_serial.cpp  nvector_serial_generated.hpp
bindings/sundials4py/sunadaptcontroller/: generate.yaml  sunadaptcontroller_imexgus.cpp  sunadaptcontroller_imexgus_generated.hpp  sunadaptcontroller_mrihtol.cpp  sunadaptcontroller_mrihtol_generated.hpp  sunadaptcontroller_soderlind.cpp  sunadaptcontroller_soderlind_generated.hpp
bindings/sundials4py/sunadjointcheckpointscheme/: generate.yaml  sunadjointcheckpointscheme_fixed.cpp  sunadjointcheckpointscheme_fixed_generated.hpp
bindings/sundials4py/sundials/: generate.yaml  sundials_adaptcontroller.cpp  sundials_adaptcontroller_generated.hpp  sundials_adjointcheckpointscheme.cpp  sundials_adjointcheckpointscheme_generated.hpp  sundials_adjointstepper.cpp  sundials_adjointstepper_generated.hpp  sundials_context.cpp  sundials_context_generated.hpp  sundials_context_usersupplied.hpp  sundials_core.cpp  sundials_domeigestimator.cpp  sundials_domeigestimator_generated.hpp  sundials_domeigestimator_usersupplied.hpp  sundials_errors.hpp  sundials_linearsolver.cpp  sundials_linearsolver_generated.hpp  sundials_linearsolver_usersupplied.hpp  sundials_logger.cpp  sundials_logger_generated.hpp  sundials_matrix.cpp  sundials_matrix_generated.hpp  sundials_memory.cpp  sundials_memory_generated.hpp  sundials_nonlinearsolver.cpp  sundials_nonlinearsolver_generated.hpp  sundials_nonlinearsolver_usersupplied.hpp  sundials_nvector.cpp  sundials_nvector_generated.hpp  sundials_profiler.cpp  sundials_profiler_generated.hpp  sundials_stepper.cpp  sundials_stepper_generated.hpp  sundials_stepper_usersupplied.hpp
bindings/sundials4py/sundomeigest/: generate.yaml  sundomeigest_power.cpp  sundomeigest_power_generated.hpp
bindings/sundials4py/sunlinsol/: generate.yaml  sunlinsol_band.cpp  sunlinsol_band_generated.hpp  sunlinsol_dense.cpp  sunlinsol_dense_generated.hpp  sunlinsol_pcg.cpp  sunlinsol_pcg_generated.hpp  sunlinsol_spbcgs.cpp  sunlinsol_spbcgs_generated.hpp  sunlinsol_spfgmr.cpp  sunlinsol_spfgmr_generated.hpp  sunlinsol_spgmr.cpp  sunlinsol_spgmr_generated.hpp  sunlinsol_sptfqmr.cpp  sunlinsol_sptfqmr_generated.hpp
bindings/sundials4py/sunmatrix/: generate.yaml  sunmatrix_band.cpp  sunmatrix_band_generated.hpp  sunmatrix_dense.cpp  sunmatrix_dense_generated.hpp  sunmatrix_sparse.cpp  sunmatrix_sparse_generated.hpp
bindings/sundials4py/sunmemory/: generate.yaml  sunmemory_system.cpp  sunmemory_system_generated.hpp
bindings/sundials4py/sunnonlinsol/: generate.yaml  sunnonlinsol_auto.cpp  (+5 more)
examples/arkode/: CMakeLists.txt
examples/kinsol/: CMakeLists.txt
test/: CMakeLists.txt  compare_benchmarks.py  compare_examples.py  config_cmake.py  notify.py  testRunner  test_driver.sh  test_install.py
test/dev_tests/: CMakeLists.txt
test/env/: docker.sh  jenkins.sh  lassen.sh  quartz.sh  setup_env.sh
test/problems/: kpr.hpp  lotka_volterra.hpp  shampine.hpp  van_der_pol.hpp
test/unit_tests/: CMakeLists.txt
test/utilities/: test_utilities.f90
(+2016 files in other folders)
