# ---------------------------------------------------------------
# Programmer(s): David J. Gardner @ LLNL
# ---------------------------------------------------------------
# SUNDIALS Copyright Start
# Copyright (c) 2025, Lawrence Livermore National Security,
# University of Maryland Baltimore County, and the SUNDIALS contributors.
# Copyright (c) 2013-2025, Lawrence Livermore National Security
# and Southern Methodist University.
# Copyright (c) 2002-2013, Lawrence Livermore National Security.
# All rights reserved.
#
# See the top-level LICENSE and NOTICE files for details.
#
# SPDX-License-Identifier: BSD-3-Clause
# SUNDIALS Copyright End
# ---------------------------------------------------------------

message("Adding development tests")

# if(BUILD_ARKODE)
#   add_subdirectory(arkode)
# endif()

# if(BUILD_CVODE)
#   add_subdirectory(cvode)
# endif()

# if(BUILD_CVODES)
#   add_subdirectory(cvodes)
# endif()

# if(BUILD_IDA)
#   add_subdirectory(ida)
# endif()

# if(BUILD_IDAS)
#   add_subdirectory(idas)
# endif()

# if(BUILD_KINSOL)
#   add_subdirectory(kinsol)
# endif()
